--- a/Dev2AssessorApp/Src/BankScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/BankScreen.fx.yaml
@@ -885,6 +885,10 @@ BankScreen As screen:
                         OnSelect: |
                             =//if network available then patch 1 status data to dataverse
                             //Notify("111111111111111111",NotificationType.Information);
+                            Set(
+                                    varBankUnitId,
+                                    ThisItem.bankUnitId.Id
+                                );
                             If(
                                 Connection.Connected,
                                 If(
@@ -1051,7 +1055,8 @@ BankScreen As screen:
                                             Concurrent(
                                             UpdateIf(
                                                 GcSectionAssessment,
-                                                'sectionAssessment (quantum_sectionassessment)' = i.'sectionAssessment (quantum_sectionassessment)' && SstatusUpdate = 1,
+                                                'sectionAssessment (quantum_sectionassessment)' = i.'sectionAssessment (quantum_sectionassessment)' //&& SstatusUpdate = 1
+                                                ,
                                                 {
                                                     'sectionAssessment (quantum_sectionassessmentid)': i.'sectionAssessment (quantum_sectionassessmentid)',
                                                     sectionComment: i.sectionComment,
@@ -1179,7 +1184,8 @@ BankScreen As screen:
                                             Concurrent(
                                              UpdateIf(
                                                 GcCheckpointAssessment,
-                                                checkpointAssessment_id = j.checkpointAssessment_id && CstatusUpdate = 1,
+                                                checkpointAssessment_id = j.checkpointAssessment_id //&& CstatusUpdate = 1
+                                                ,
                                                 {
                                                     checkpointAssessment: j.checkpointAssessment,
                                                     checkpointComment: j.checkpointComment,
@@ -1291,7 +1297,8 @@ BankScreen As screen:
                                             Concurrent(
                                              UpdateIf(
                                                 GC_checkpointItemAssessment,
-                                                'checkpointItemAssessment (quantum_checkpointitemassessment)' = k.'checkpointItemAssessment (quantum_checkpointitemassessment)' && CIstatusUpdate = 1,
+                                                'checkpointItemAssessment (quantum_checkpointitemassessment)' = k.'checkpointItemAssessment (quantum_checkpointitemassessment)' //&& CIstatusUpdate = 1
+                                                ,
                                                 {
                                                     'checkpointItemAssessment (quantum_checkpointitemassessmentid)': k.'checkpointItemAssessment (quantum_checkpointitemassessmentid)',
                                                     assessmentStatus: k.assessmentStatus,
@@ -1392,7 +1399,8 @@ BankScreen As screen:
                                             TempcheckpointItem_ActionItem As i,
                                             UpdateIf( 
                                                 GC_checkpointItem_ActionItem,
-                                                checkpointItemActionItemsId = i.checkpointItemActionItemsId && CIAstatusUpdate = 1,
+                                                checkpointItemActionItemsId = i.checkpointItemActionItemsId //&& CIAstatusUpdate = 1
+                                                ,
                                                 {
                                                     checkpointItem_ActionItems: i.checkpointItem_ActionItems,//unique key
                                                     Action_status: i.Action_status,
@@ -1450,7 +1458,8 @@ BankScreen As screen:
                                             TempCheckpointItem_Images As i,
                                             UpdateIf(
                                                 GC_checkpointItem_Images,
-                                                checkpointItemImagesId = i.checkpointItemImagesId && CIIstatusUpdate = 1,
+                                                checkpointItemImagesId = i.checkpointItemImagesId //&& CIIstatusUpdate = 1
+                                                ,
                                                 {
                                                     checkpointItem_Images: i.checkpointItem_Images,//unique key
                                                     CIIstatusUpdate: 2
