--- a/Dev2AssessorApp/Src/BankScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/BankScreen.fx.yaml
@@ -3,6 +3,7 @@ BankScreen As screen:
     OnVisible: |
         =Set(varComment,false);
         Set(popupSyncSuccess,false);
+        Refresh(unitAssessment);
         Trace(
             First(gcBank).productId.product_Model,
             TraceSeverity.Information
