--- a/Dev2AssessorApp/Src/TripReportScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/TripReportScreen.fx.yaml
@@ -113,16 +113,16 @@ TripReportScreen As screen:
                         )
                     Fill: =AllScreensCSS.RActiveColor
                     Font: =AllScreensCSS.RFont
-                    Height: =50
+                    Height: =60
                     HoverBorderColor: =Self.BorderColor
                     HoverFill: =AllScreensCSS.RActiveColor
                     OnSelect: |-
                         =Set(varBanktripReportComment,true);
                         Set(varComment,true);
                     Size: =AllScreensCSS.RfontsizeInput
-                    Text: ="Comment"
+                    Text: ="Reviewer Comment"
                     Visible: =If(comp=true,false,true)
-                    Width: =120
+                    Width: =140
                     ZIndex: =2
 
             ctnMainassessmentTRS As groupContainer.verticalAutoLayoutContainer:
@@ -515,7 +515,8 @@ TripReportScreen As screen:
                 FillPortions: =0
                 Height: |-
                     =//Parent.Height
-                    Gallery14_1.Height
+                    //Gallery14_1.Height+10
+                    Gallery15.Height+Label22.Height
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutMinHeight: =1000
                 LayoutMinWidth: =250
@@ -531,9 +532,10 @@ TripReportScreen As screen:
                     AlignInContainer: =AlignInContainer.Start
                     BorderColor: =RGBA(255, 191, 0, 1)
                     FillPortions: =0
-                    Height: |
+                    Height: |-
                         =//Parent.Height
-                        CountRows(Gallery14_1.AllItems)*(Gallery14_1.TemplateHeight)*1.02
+                        //CountRows(Gallery14_1.AllItems)*(Gallery14_1.TemplateHeight)
+                        CountRows(Gallery14_1.AllItems)*(Gallery14_1.TemplateHeight)
                     Items: =localCollectionAction
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =287
