--- a/Dev2AssessorApp/Src/BankScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/BankScreen.fx.yaml
@@ -254,7 +254,7 @@ BankScreen As screen:
                                         ));
                                     Set(
                                         VarTripReportNotification,
-                                        "Trip report Update successfully."
+                                        "Trip report Updated successfully."
                                     )
                                 );
                                 ClearCollect(localCollectionAction,
