--- a/Dev2AssessorApp/Src/BankScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/BankScreen.fx.yaml
@@ -241,7 +241,8 @@ BankScreen As screen:
                                     IsBlank(
                                         LookUp(
                                             BankTripReport,
-                                            assignmentId.Id = glryProject.Selected.Id && bankId.Id = glryProject.Selected.bankId.Id
+                                            assignmentId.Id = glryProject.Selected.Id 
+                                            //&& bankId.Id = glryProject.Selected.bankId.Id
                                         )
                                     ),
                                     Set(
