--- a/Dev2AssessorApp/Src/TripReportScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/TripReportScreen.fx.yaml
@@ -539,7 +539,7 @@ TripReportScreen As screen:
                         //CountRows(Gallery14_1.AllItems)*(CountRows(Gallery15.AllItems)*Gallery15.TemplateHeight)*Label22.Height
                         //CountRows(Gallery14_1.AllItems)*(Label22.Height+(CountRows(Gallery15.AllItems)*Gallery15.TemplateHeight))*1.34
                         //(CountRows(Gallery14_1.AllItems)*Gallery14_1.TemplateHeight+Gallery15.Height)
-                    Items: =localCollectionAction
+                    Items: =//localCollectionAction
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =500
                     LayoutMinWidth: =320
@@ -560,7 +560,7 @@ TripReportScreen As screen:
                         Height: =50
                         Size: =20
                         Text: |+
-                            ="Unit : " & LookUp(gcBankunit,Id =ThisItem.unit,unitNumber) &"   " & "Section : " & ThisItem.section
+                            =//"Unit : " & LookUp(gcBankunit,Id =ThisItem.unit,unitNumber) &"   " & "Section : " & ThisItem.section
                             
                         Width: =630
                         Y: =3
@@ -580,7 +580,7 @@ TripReportScreen As screen:
                             //CountRows(ThisItem.data)*Gallery15.TemplateHeight
                             //CountRows(Gallery15.AllItems)*(Gallery15.TemplateHeight)
                         Items: |-
-                            =Sort(Sort(ThisItem.data,checkpointItem_Id.checkpointitemSequence),checkpoint_id.CheckpointSequence)
+                            =//Sort(Sort(ThisItem.data,checkpointItem_Id.checkpointitemSequence),checkpoint_id.CheckpointSequence)
                             //Filter(checkpointItem_ActionItem,assignmentId.Id=glryProject.Selected.Id&& //bankUnitId.Id=glryBankGo_1.Selected.bankUnitId.Id)
                         Layout: =Layout.Vertical
                         TemplatePadding: =1
@@ -671,12 +671,12 @@ TripReportScreen As screen:
 
                         DatePicker3_2 As datepicker:
                             BorderColor: =RGBA(9, 33, 98, 1)
-                            DefaultDate: =ThisItem.DueDate
+                            DefaultDate: =//ThisItem.DueDate
                             DisabledBorderColor: =RGBA(153, 153, 153, 1)
                             DisabledColor: =RGBA(179, 179, 179, 1)
                             Height: =30
                             OnChange: |-
-                                =UpdateIf(checkpointItem_ActionItem,checkpointItemActionItemsId=ThisItem.checkpointItemActionItemsId,{DueDate:DatePicker3_2.SelectedDate});
+                                =//UpdateIf(checkpointItem_ActionItem,checkpointItemActionItemsId=ThisItem.checkpointItemActionItemsId,{DueDate:DatePicker3_2.SelectedDate});
                             OnSelect: =Select(Parent)
                             Visible: =false
                             Width: =Parent.Width/8
@@ -745,7 +745,7 @@ TripReportScreen As screen:
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =16
-                            Text: =ThisItem.priority
+                            Text: =//ThisItem.priority
                             VerticalAlign: =VerticalAlign.Top
                             Width: =180
                             X: =lblPriorityAR.X + lblPriorityAR.Width
@@ -760,7 +760,7 @@ TripReportScreen As screen:
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =16
-                            Text: =ThisItem.OwnerId
+                            Text: =//ThisItem.OwnerId
                             VerticalAlign: =VerticalAlign.Top
                             Width: =300
                             X: =lblOwnerIdAR.X+lblOwnerIdAR.Width
@@ -792,7 +792,7 @@ TripReportScreen As screen:
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =16
-                            Text: =ThisItem.checkpoint_id.checkpointName
+                            Text: =//ThisItem.checkpoint_id.checkpointName
                             VerticalAlign: =VerticalAlign.Top
                             Width: =Parent.Width -230
                             X: =lblCheckpointAR.X+lblCheckpointAR.Width
@@ -808,7 +808,7 @@ TripReportScreen As screen:
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =16
-                            Text: =ThisItem.checkpointItem_Id.checkpointItemName
+                            Text: =//ThisItem.checkpointItem_Id.checkpointItemName
                             VerticalAlign: =VerticalAlign.Top
                             Width: =Parent.Width -230
                             X: =lblItemAR.X+lblItemAR.Width
@@ -827,7 +827,7 @@ TripReportScreen As screen:
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =16
-                            Text: =ThisItem.ActionItem_Name
+                            Text: =//ThisItem.ActionItem_Name
                             VerticalAlign: =VerticalAlign.Top
                             Width: =Parent.Width - 230
                             X: =lblActionReqAR.X + lblActionReqAR.Width
@@ -851,7 +851,7 @@ TripReportScreen As screen:
                             Height: =30
                             OnSelect: =Select(Parent)
                             Size: =16
-                            Text: =ThisItem.MaterialEstimate
+                            Text: =//ThisItem.MaterialEstimate
                             Width: =140
                             X: =LblMaterialEstimateAR.X+LblMaterialEstimateAR.Width
                             Y: =lblOwnerIdValueAR.Y +lblOwnerIdValueAR.Height
@@ -861,7 +861,7 @@ TripReportScreen As screen:
                             Height: =30
                             OnSelect: =Select(Parent)
                             Size: =16
-                            Text: =ThisItem.TimeEstimate
+                            Text: =//ThisItem.TimeEstimate
                             Width: =300
                             X: =lblTimeestimateAR.X + lblTimeestimateAR.Width
                             Y: =lblOwnerIdValueAR.Y +lblOwnerIdValueAR.Height
